--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 
   <h1>Welcome</h1>
   <!-- Application component -->
-  <root-app>Loading…</root-app>
+  <nmd-app>Loading…</nmd-app>
 </body>
 
 </html>
